- IMPROVEMENT: Parse description information in ivy files (IVY-766)
- IMPROVEMENT: Parse description and home page from poms (IVY-767)
- IMPROVEMENT: Change allownomd and skipbuildwithoutivy into a more semantically correct name (IVY-297)
- IMPROVEMENT: Smarter determination if an expression is exact or not for RegexpPatternMatcher and GlobPatternMatcher

- FIX: transitive attribute set to false because of dependency (IVY-105)
- FIX: Wrong check for defaultCacheArtifactPattern (IVY-840)
- FIX: NPE in ivy:install if ivy.settings.xml contains custom attribute for a module (IVY-838)
- FIX: Ivy unit tests fail because 'classifier' attribute of 'artifacts' element is missing in ivy.xsd (IVY-837)
- FIX: Ivy build system: fix build.xml to allow "ant coverage-report" behind a proxy (IVY-832)
- FIX: NPE in AbstractResolver.exists() if a resource cannot be found (IVY-831)
- FIX: Ivy distribution jars contains duplicate entries (IVY-828)
- FIX: ivy:report will generate an HTML file that references non-existent ivy-report.css (IVY-826)
- FIX: dynamic resolveMode not being dynamic on branch (IVY-825)
- FIX: Filesystem repositories can not have () in the path (IVY-797)
- FIX: Type tag in poms not supported (IVY-762)
- FIX: An empty exclusion tag results in an IllegalArgumentException (IVY-821)
- FIX: Maven scope defined in POM dependencyManagement section not honoured (IVY-811)
- FIX: SFTPRepository incorrectly calculates last modified time for resources (IVY-815)
- FIX: Filesystem resolver does not evaluate [branch] token when publishing (IVY-814)
- FIX: Using ivy:settings with the "id" attribute not behaving as expected (IVY-809)
- FIX: onMissingDescriptor doesn't work due to == comparison (IVY-805) (thanks to Ben Hale)
- FIX: revision token is not set in report outputpattern (IVY-272)
- FIX: Ivy uses the first set of configurations it sees when resolving multiple versions of a module (IVY-681)