@@ -1604,30 +1604,13 @@ condition|)
 block|{
 name|usage
 operator|.
-name|addDependencyArtifacts
+name|addUsage
 argument_list|(
 name|rootModuleConf
 argument_list|,
 name|dd
-operator|.
-name|getDependencyArtifacts
-argument_list|(
-name|parentConf
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|usage
-operator|.
-name|addDependencyIncludes
-argument_list|(
-name|rootModuleConf
 argument_list|,
-name|dd
-operator|.
-name|getIncludeRules
-argument_list|(
 name|parentConf
-argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -1769,32 +1752,13 @@ name|resolved
 operator|.
 name|usage
 operator|.
-name|addDependencyArtifacts
+name|addUsage
 argument_list|(
 name|rootModuleConf
 argument_list|,
 name|dd
-operator|.
-name|getDependencyArtifacts
-argument_list|(
-name|parentConf
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|resolved
-operator|.
-name|usage
-operator|.
-name|addDependencyIncludes
-argument_list|(
-name|rootModuleConf
 argument_list|,
-name|dd
-operator|.
-name|getIncludeRules
-argument_list|(
 name|parentConf
-argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
