@@ -119,6 +119,24 @@ name|module
 operator|.
 name|descriptor
 operator|.
+name|DependencyDescriptor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|module
+operator|.
+name|descriptor
+operator|.
 name|IncludeRule
 import|;
 end_import
@@ -326,6 +344,44 @@ return|;
 block|}
 block|}
 specifier|private
+specifier|static
+specifier|final
+class|class
+name|Depender
+block|{
+specifier|private
+name|DependencyDescriptor
+name|dd
+decl_stmt|;
+specifier|private
+name|String
+name|dependerConf
+decl_stmt|;
+specifier|public
+name|Depender
+parameter_list|(
+name|DependencyDescriptor
+name|dd
+parameter_list|,
+name|String
+name|dependerConf
+parameter_list|)
+block|{
+name|this
+operator|.
+name|dd
+operator|=
+name|dd
+expr_stmt|;
+name|this
+operator|.
+name|dependerConf
+operator|=
+name|dependerConf
+expr_stmt|;
+block|}
+block|}
+specifier|private
 name|IvyNode
 name|node
 decl_stmt|;
@@ -349,19 +405,10 @@ operator|new
 name|HashMap
 argument_list|()
 decl_stmt|;
-comment|// Map (String rootModuleConf -> Set(DependencyArtifactDescriptor))
 specifier|private
 name|Map
-name|dependencyArtifacts
-init|=
-operator|new
-name|HashMap
-argument_list|()
-decl_stmt|;
-comment|// Map (String rootModuleConf -> Set(IncludeRule))
-specifier|private
-name|Map
-name|dependencyIncludes
+comment|/*<String, Set<Depender>>*/
+name|dependers
 init|=
 operator|new
 name|HashMap
@@ -573,9 +620,9 @@ name|updateMapOfSetForKey
 argument_list|(
 name|usage
 operator|.
-name|dependencyArtifacts
+name|dependers
 argument_list|,
-name|dependencyArtifacts
+name|dependers
 argument_list|,
 name|rootModuleConf
 argument_list|)
@@ -711,62 +758,16 @@ expr_stmt|;
 block|}
 block|}
 block|}
-specifier|protected
-name|void
-name|addDependencyArtifacts
-parameter_list|(
-name|String
-name|rootModuleConf
-parameter_list|,
-name|DependencyArtifactDescriptor
-index|[]
-name|dependencyArtifacts
-parameter_list|)
-block|{
-name|addObjectsForConf
-argument_list|(
-name|rootModuleConf
-argument_list|,
-name|Arrays
-operator|.
-name|asList
-argument_list|(
-name|dependencyArtifacts
-argument_list|)
-argument_list|,
-name|this
-operator|.
-name|dependencyArtifacts
-argument_list|)
-expr_stmt|;
-block|}
-specifier|protected
-name|void
-name|addDependencyIncludes
-parameter_list|(
-name|String
-name|rootModuleConf
-parameter_list|,
-name|IncludeRule
-index|[]
-name|rules
-parameter_list|)
-block|{
-name|addObjectsForConf
-argument_list|(
-name|rootModuleConf
-argument_list|,
-name|Arrays
-operator|.
-name|asList
-argument_list|(
-name|rules
-argument_list|)
-argument_list|,
-name|dependencyIncludes
-argument_list|)
-expr_stmt|;
-block|}
+comment|//    protected void addDependencyArtifacts(String rootModuleConf,
+comment|//            DependencyArtifactDescriptor[] dependencyArtifacts) {
+comment|//        addObjectsForConf(rootModuleConf, Arrays.asList(dependencyArtifacts),
+comment|//            this.dependencyArtifacts);
+comment|//    }
+comment|//
+comment|//    protected void addDependencyIncludes(String rootModuleConf, IncludeRule[] rules) {
+comment|//        addObjectsForConf(rootModuleConf, Arrays.asList(rules), dependencyIncludes);
+comment|//    }
+comment|//
 specifier|private
 name|void
 name|addObjectsForConf
@@ -774,8 +775,8 @@ parameter_list|(
 name|String
 name|rootModuleConf
 parameter_list|,
-name|Collection
-name|objectsToAdd
+name|Object
+name|objectToAdd
 parameter_list|,
 name|Map
 name|map
@@ -819,9 +820,39 @@ expr_stmt|;
 block|}
 name|set
 operator|.
-name|addAll
+name|add
 argument_list|(
-name|objectsToAdd
+name|objectToAdd
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|addUsage
+parameter_list|(
+name|String
+name|rootModuleConf
+parameter_list|,
+name|DependencyDescriptor
+name|dd
+parameter_list|,
+name|String
+name|parentConf
+parameter_list|)
+block|{
+name|addObjectsForConf
+argument_list|(
+name|rootModuleConf
+argument_list|,
+operator|new
+name|Depender
+argument_list|(
+name|dd
+argument_list|,
+name|parentConf
+argument_list|)
+argument_list|,
+name|dependers
 argument_list|)
 expr_stmt|;
 block|}
@@ -833,16 +864,95 @@ name|String
 name|rootModuleConf
 parameter_list|)
 block|{
-return|return
+name|Collection
+name|dependersInConf
+init|=
 operator|(
-name|Set
+name|Collection
 operator|)
-name|dependencyArtifacts
+name|dependers
 operator|.
 name|get
 argument_list|(
 name|rootModuleConf
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|dependersInConf
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+name|Set
+name|dependencyArtifacts
+init|=
+operator|new
+name|HashSet
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|Iterator
+name|iterator
+init|=
+name|dependersInConf
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iterator
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|Depender
+name|depender
+init|=
+operator|(
+name|Depender
+operator|)
+name|iterator
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|DependencyArtifactDescriptor
+index|[]
+name|dads
+init|=
+name|depender
+operator|.
+name|dd
+operator|.
+name|getDependencyArtifacts
+argument_list|(
+name|depender
+operator|.
+name|dependerConf
+argument_list|)
+decl_stmt|;
+name|dependencyArtifacts
+operator|.
+name|addAll
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|dads
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|dependencyArtifacts
 return|;
 block|}
 specifier|protected
@@ -853,16 +963,114 @@ name|String
 name|rootModuleConf
 parameter_list|)
 block|{
-return|return
+name|Collection
+name|dependersInConf
+init|=
 operator|(
-name|Set
+name|Collection
 operator|)
-name|dependencyIncludes
+name|dependers
 operator|.
 name|get
 argument_list|(
 name|rootModuleConf
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|dependersInConf
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+name|Set
+name|dependencyIncludes
+init|=
+operator|new
+name|HashSet
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|Iterator
+name|iterator
+init|=
+name|dependersInConf
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iterator
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|Depender
+name|depender
+init|=
+operator|(
+name|Depender
+operator|)
+name|iterator
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|IncludeRule
+index|[]
+name|rules
+init|=
+name|depender
+operator|.
+name|dd
+operator|.
+name|getIncludeRules
+argument_list|(
+name|depender
+operator|.
+name|dependerConf
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|rules
+operator|==
+literal|null
+operator|||
+name|rules
+operator|.
+name|length
+operator|==
+literal|0
+condition|)
+block|{
+comment|// no include rule in at least one depender -> we must include everything,
+comment|// and so return no include rule at all
+return|return
+literal|null
+return|;
+block|}
+name|dependencyIncludes
+operator|.
+name|addAll
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|rules
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|dependencyIncludes
 return|;
 block|}
 specifier|protected
