@@ -8788,6 +8788,114 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testResolveWithIncludeArtifactsTransitive
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// test case for IVY-541
+comment|// mod2.6 depends on mod2.3 and mod2.1
+comment|// mod2.3 depends on mod2.1 and selects its artifacts
+name|ResolveReport
+name|report
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org2/mod2.6/ivys/ivy-0.5.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getIvyFileInCache
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org2"
+argument_list|,
+literal|"mod2.1"
+argument_list|,
+literal|"0.3"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"org2"
+argument_list|,
+literal|"mod2.1"
+argument_list|,
+literal|"0.3"
+argument_list|,
+literal|"art21A"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"org2"
+argument_list|,
+literal|"mod2.1"
+argument_list|,
+literal|"0.3"
+argument_list|,
+literal|"art21B"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testResolveWithExcludesArtifacts
 parameter_list|()
 throws|throws
