@@ -28,16 +28,16 @@
   </publications>
   <dependencies>
     <dependency name="module_b" rev="latest.integration" conf="build">
-      <artifact name="lib_b_a" type="jar" />
+      <include name="lib_b_a" type="jar" />
     </dependency>
     <dependency name="module_c" rev="latest.integration" conf="build">
-      <artifact name="lib_c_a" type="jar" />
+      <include name="lib_c_a" type="jar" />
     </dependency>
     <dependency name="module_a" rev="latest.integration" conf="build">
-      <artifact name="lib_a_a" type="jar" />
-      <artifact name="lib_a_c" type="jar" />
-      <artifact name="lib_a_d" type="jar" />
-      <artifact name="lib_a_e" type="jar" />
+      <include name="lib_a_a" type="jar" />
+      <include name="lib_a_c" type="jar" />
+      <include name="lib_a_d" type="jar" />
+      <include name="lib_a_e" type="jar" />
     </dependency>
   </dependencies>
 </ivy-module>
